[build-system]
requires = ["setuptools>=61.0", "cmake>=2.8"]
build-backend = "setuptools.build_meta"

[project]
name = "hatchet"
version = "2.1.0"
authors = [
  { name="Simone Zaccaria", email="s.zaccaria@ucl.ac.uk" },
  { name="Ben Raphael", email="braphael@cs.princeton.edu" },
  { name="Matt Myers", email="mm63@cs.princeton.edu" },
  { name="Brian Arnold", email="brianjohnarnold@gmail.com" },
  { name="Vineet Bansal", email="vineetb@princeton.edu" },
  { name="Metin Balaban", email="metin@princeton.edu" }
]
description = "A package to infer allele and clone-specific copy-number aberrations (CNAs)."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "pybedtools",
    "biopython",
    "hmmlearn",
    "matplotlib",
    "numpy<2",
    "pandas",
    "psutil",
    "pyomo",
    "pysam",
    "requests",
    "seaborn",
    "scikit-learn",
    "scipy",
    "statsmodels"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest>=6",
    "pytest-cov",
    "mock",
    "coverage",
    "numpydoc",
    "sphinx",
    "sphinxcontrib-bibtex<2.0.0",
    "sphinx-rtd-theme",
    "recommonmark",
    "sphinx-markdown-tables",
]

[project.scripts]
hatchet = "hatchet.__main__:main"

[project.urls]
"Homepage" = "https://github.com/raphael-group/hatchet"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["hatchet*"]

[tool.setuptools.package-data]
hatchet = ["hatchet.ini"]
"hatchet.data" = ["*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA"
testpaths = [
    "tests"
]

[tool.ruff.lint]
# E731: Too many uses of lambdas throughout the codebase currently
# E741: We're using variable names that are too short ('l' etc).
ignore = ["E731", "E741"]
